# 04-transcriptomica

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_tables.py
app/: config.py  database.py  main.py
app/api/: __init__.py  references.py  runs.py
app/models/: __init__.py  enums.py  reference.py  run.py
app/schemas/: __init__.py  reference.py  run.py
app/services/: __init__.py  datalake_service.py  minio_service.py  monitor_service.py  pipeline_service.py  report_service.py
docs/: DISSERTACAO.md  PLANO-PROJETO-4.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: badge.ts  toast.ts
frontend/src/pages/: index.ts  references.ts  run-create.ts  run-detail.ts  runs-list.ts
frontend/src/types/: index.ts
pipeline/: Dockerfile.r  main.nf  nextflow.config
pipeline/assets/: samplesheet.csv
pipeline/conf/: base.config  docker.config  eco.config  grch38.config  micro.config  slim.config  test.config
pipeline/modules/deseq2/: deseq2.R  environment.yml  main.nf  qc_advanced.R  render_report.R  report.Rmd  report_enhanced.Rmd
pipeline/modules/enrichment/: enrichment.R  environment.yml  main.nf
scripts/: download-ref-grch38.sh  setup-env.sh
tests/: conftest.py
tests/test_api/: test_references.py  test_runs.py
tests/test_services/: test_enums.py  test_services.py
worker/: Dockerfile
