[project]
name = "transcriptomics-pipeline"
version = "0.1.0"
description = "Transcriptomics Pipeline — RNA-Seq differential expression"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "minio>=7.2",
    "alembic>=1.14",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.15",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
